Modal Button Color fix  - remove css which gave close button wrong color

--- a/source/sass/component/_modal.scss
+++ b/source/sass/component/_modal.scss
@@ -58,7 +58,6 @@
 
     .c-button:hover {
         box-shadow:none;
-        color: $color-secondary;
     }
 
     &__close {
